Add Kpop Quiz and Find A Flick to projects section

--- a/index.html
+++ b/index.html
@@ -66,6 +66,20 @@
           <h2>Projects</h2>
           <div class="group">
             <div class="item">
+              <h3>K-Pop Quiz App</h3>
+              <img src="images/kpop-quiz.png" alt="K-pop Quiz App">
+              <p>A quiz app with questions about K-pop. Made with HTML, CSS, JavaScript, and jQuery.</p>
+              <p><a href="https://github.com/brendanloomis/kpop-quiz-app" target="_blank">Repo</a> <a href="https://brendanloomis.github.io/kpop-quiz-app/" target="_blank">Live</a></p>
+            </div>
+            <div class="item">
+              <h3>Find A Flick</h3>
+              <img src="images/find-a-flick.png" alt="Find A Flick">
+              <p>An app that gives the users movie recommendations based on a movie title that they input. Made with HTML, CSS, JavaScript, and jQuery.</p>
+              <p><a href="https://github.com/brendanloomis/find-a-flick" target="_blank">Repo</a> <a href="https://brendanloomis.github.io/find-a-flick/" target="_blank">Live</a></p>
+            </div>
+          </div>
+          <div class="group">
+            <div class="item">
               <h3>Project Placeholder</h3>
               <img src="images/coming-soon.jpg" alt="coming soon">
               <p>Project description will go here. The languages used to create the app will also go here.</p>
