fix image for album track

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
           <div class="group">
             <div class="item">
               <h3>Album Track</h3>
-              <img src="images/album-track.jpg" alt="Album Track">
+              <img src="images/album-track.png" alt="Album Track">
               <p>An app that allows users to manage and keep track of their album collection. Made with HTML, CSS, JaveScript, React, Node, Express, and PostgreSQL.</p>
               <p><a href="https://github.com/brendanloomis/album-track" target="_blank">Repo</a> <a href="https://album-track.vercel.app/" target="blank">Live</a></p>
             </div>
