added Charabox to Projects Section

--- a/index.html
+++ b/index.html
@@ -82,14 +82,14 @@
             <div class="item">
               <h3>Album Track</h3>
               <img src="images/album-track.png" alt="Album Track">
-              <p>An app that allows users to manage and keep track of their album collection. Made with HTML, CSS, JaveScript, React, Node, Express, and PostgreSQL.</p>
+              <p>An app that allows users to manage and keep track of their album collection. Made with HTML, CSS, JavaScript, React, Node, Express, and PostgreSQL.</p>
               <p><a href="https://github.com/brendanloomis/album-track" target="_blank">Repo</a> <a href="https://album-track.vercel.app/" target="blank">Live</a></p>
             </div>
             <div class="item">
-              <h3>Project Placeholder</h3>
-              <img src="images/coming-soon.jpg" alt="coming soon">
-              <p>Project description will go here. The languages used to create the app will also go here.</p>
-              <p><a href="#">Repo</a> <a href="#">Live</a></p>
+              <h3>Charabox</h3>
+              <img src="images/charabox.png" alt="Charabox">
+              <p>An app that lets users manage character development for their creative writing projects. Made with HTML, CSS, JavaScript, React, Node, Express, and PostgreSQL.</p>
+              <p><a href="https://github.com/brendanloomis/charabox" target="_blank">Repo</a> <a href="https://charabox.vercel.app/" target="_blank">Live</a></p>
             </div>
           </div>
         </article>
