--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             </div>
             <div class="item">
               <h2 id="hello">Hello! I'm Brendan Loomis.</h2>
-              <p>I am a web developer located in Los Angeles, CA.</p>
+              <p>I am a web developer located in Corona, CA.</p>
               <p>I create apps and webpages using Javascript, HTML, and CSS.</p>
             </div>
           </div>
